@@ -46,6 +46,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Broken Smarty debugging—thanks Rosenstein.
 * [Fixed] Annoying ugly links urls.
 * [Changed] Cookies are now only set as secure if the host is using HTTPS.
+* [Improved] "V" ratings are now prorated to games played relative to a 162 game season.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
